# yew-app

./: Cargo.toml  Trunk.toml  index.html  mapbox-gl.d.ts
src/: main.rs
src/components/: chart.rs  home.rs  map.rs  mod.rs  plane_2d.rs
src/domain/: bike.rs  json_data.rs  mod.rs
src/helpers/: cirlcle.rs  create_json.rs  get_center_from_airports.rs  mod.rs  path_2d.rs
src/stores/: animation.rs  main_data.rs  mod.rs
