[package]
name = "stolen-bikes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo-net = "0.2"
serde = { version = "1.0.145", features = ["derive"] }
wasm-bindgen-futures = "0.4"
weblog = "0.3.0"
chrono = "0.4.22"
yew-router = "0.16.0"
wasm-bindgen = "0.2.83"
yew-oauth2 = { version = "0.4", features = ["router"] }
yew-interop = "0.3"
geojson = "0.24.0"
js-sys = "0.3.60"
stdweb = "0.4.20"
yewdux = "0.8"
geo = { version = "0.23.0", features = ["use-serde"] }
geo-types = "0.7.7"
serde_json = "1.0.86"
gloo-render = "0.1.1"
yew-hooks = "0.1.56"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'HtmlSelectElement',
    'HtmlInputElement',
    'Document',
    'Element',
    'Node',
    'HtmlImageElement',
    'Window'
]

# [profile.release]
# # less code to include into binary
# panic = 'abort'
# # optimization over all codebase ( better optimization, slower build )
# codegen-units = 1
# # optimization for size ( more aggressive )
# opt-level = 'z'
# # optimization for size
# # opt-level = 's'
# # link time optimization using using whole-program analysis
# lto = true